cleared errors but only initial 50 were infected

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +157,8 @@
     "        # This attribute is used in a function that is provided for you in order to log statistics from each time_step.  \n",
     "        # Don't touch it!\n",
     "        self.time_step_statistics_df = pd.DataFrame()\n",
+    "      \n",
+    "\n",
     "        \n",
     "        # Create a for loop the size of the population we want in this simulation\n",
     "        for i in range(population_size):\n",
@@ -180,7 +182,6 @@
     "        print(\"Simulation Initiated!\")\n",
     "        print(\"-\" * 50)\n",
     "        self._get_sim_statistics()\n",
-    "        \n",
     "        \n",
     "    \n",
     "    def _get_sim_statistics(self):\n",
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +283,7 @@
     "            # CASE: Random person is not vaccinated, and has not been infected before, making them vulnerable to infection\n",
     "            if random_person.is_vaccinated == False and random_person.has_been_infected == False:\n",
     "                # Generate a random number between 0 and 1\n",
-    "                random_number = np.random.rand(0,1)\n",
+    "                random_number = np.random.rand()\n",
     "                # If random_number is greater than or equal to (1 - self.r0), set random person as newly_infected\n",
     "                if random_number >= 1 - self.r0:\n",
     "                    random_person.newly_infected = Newly_Infected\n",
@@ -326,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +424,7 @@
     "    self._resolve_states()\n",
     "    \n",
     "    # Now, we're almost done with this time step.  Log summary statistics, and then increment self.current_time_step by 1.\n",
-    "    self.log_time_step_statistics()\n",
+    "    self._log_time_step_statistics()\n",
     "    self.current_time_step += 1\n",
     "\n",
     "# Adds this function to our Simulation class\n",
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -567,13 +568,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a67326e1467f4557b27dc3bb5317da96",
+       "model_id": "9a33b0afee9e4c58819b49b0d84b3bc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -588,20 +589,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x0000027B88E9FF60>>\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Simulation' object has no attribute 'log_time_step_statistics'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-bf40240106ca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Call sim.run() below!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-25-1ac4572d5aaa>\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Beginning Time Step {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_time_step\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[1;31m# Call our `_time_step()` function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_time_step\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# Simulation is over--log results to a file by calling _log_time_step_statistics(write_to_file=True)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-23-9f5967b29355>\u001b[0m in \u001b[0;36m_time_step\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[1;31m# Now, we're almost done with this time step.  Log summary statistics, and then increment self.current_time_step by 1.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog_time_step_statistics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_time_step\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Simulation' object has no attribute 'log_time_step_statistics'"
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "\n"
      ]
     }
    ],
@@ -612,9 +620,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Alive</th>\n",
+       "      <th>Currently Infected</th>\n",
+       "      <th>Dead</th>\n",
+       "      <th>Time Step</th>\n",
+       "      <th>Total Infected So Far</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0   Alive  Currently Infected  Dead  Time Step  \\\n",
+       "0            0  1973.0                 0.0  27.0        0.0   \n",
+       "1            1  1973.0                 0.0  27.0        1.0   \n",
+       "2            2  1973.0                 0.0  27.0        2.0   \n",
+       "3            3  1973.0                 0.0  27.0        3.0   \n",
+       "4            4  1973.0                 0.0  27.0        4.0   \n",
+       "5            5  1973.0                 0.0  27.0        5.0   \n",
+       "6            6  1973.0                 0.0  27.0        6.0   \n",
+       "7            7  1973.0                 0.0  27.0        7.0   \n",
+       "8            8  1973.0                 0.0  27.0        8.0   \n",
+       "9            9  1973.0                 0.0  27.0        9.0   \n",
+       "10          10  1973.0                 0.0  27.0       10.0   \n",
+       "11          11  1973.0                 0.0  27.0       11.0   \n",
+       "12          12  1973.0                 0.0  27.0       12.0   \n",
+       "13          13  1973.0                 0.0  27.0       13.0   \n",
+       "14          14  1973.0                 0.0  27.0       14.0   \n",
+       "15          15  1973.0                 0.0  27.0       15.0   \n",
+       "16          16  1973.0                 0.0  27.0       16.0   \n",
+       "17          17  1973.0                 0.0  27.0       17.0   \n",
+       "18          18  1973.0                 0.0  27.0       18.0   \n",
+       "19          19  1973.0                 0.0  27.0       19.0   \n",
+       "20          20  1973.0                 0.0  27.0       20.0   \n",
+       "\n",
+       "    Total Infected So Far  \n",
+       "0                    50.0  \n",
+       "1                    50.0  \n",
+       "2                    50.0  \n",
+       "3                    50.0  \n",
+       "4                    50.0  \n",
+       "5                    50.0  \n",
+       "6                    50.0  \n",
+       "7                    50.0  \n",
+       "8                    50.0  \n",
+       "9                    50.0  \n",
+       "10                   50.0  \n",
+       "11                   50.0  \n",
+       "12                   50.0  \n",
+       "13                   50.0  \n",
+       "14                   50.0  \n",
+       "15                   50.0  \n",
+       "16                   50.0  \n",
+       "17                   50.0  \n",
+       "18                   50.0  \n",
+       "19                   50.0  \n",
+       "20                   50.0  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results = pd.read_csv('simulation.csv')\n",
     "results"
