--- a/index.ipynb
+++ b/index.ipynb
@@ -29,9 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aosika\\AppData\\Local\\Continuum\\anaconda3\\envs\\learn-env\\lib\\site-packages\\tqdm\\autonotebook.py:17: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  \" (e.g. in jupyter console)\", TqdmExperimentalWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -568,13 +577,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a33b0afee9e4c58819b49b0d84b3bc9",
+       "model_id": "d8595eaa31be47d9b0dc3aa393c7d57c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -589,26 +598,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x000001B677D23F28>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
       "\n"
      ]
     }
@@ -620,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +903,7 @@
        "20                   50.0  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
