reviewed with James - bug at end

--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -577,13 +577,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8595eaa31be47d9b0dc3aa393c7d57c",
+       "model_id": "98fdcddab8f044f4941955738e59de72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -598,26 +598,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
-      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000261EC969CC0>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
+      "Beginning Time Step <bound method _time_step of <__main__.Simulation object at 0x00000153E587C518>>\n",
       "\n"
      ]
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "20                   50.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
